@@ -1,24 +1,22 @@
 package net.bytebuddy.dynamic.loading;
 
 import net.bytebuddy.test.utility.IntegrationRule;
-import net.bytebuddy.test.utility.MockitoRule;
 import org.hamcrest.CoreMatchers;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.MethodRule;
-import org.junit.rules.TestRule;
 import org.mockito.Mock;
+import org.mockito.junit.MockitoJUnit;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.Enumeration;
 import java.util.NoSuchElementException;
 
 import static net.bytebuddy.matcher.ElementMatchers.isBootstrapClassLoader;
 import static net.bytebuddy.matcher.ElementMatchers.not;
-import static org.hamcrest.CoreMatchers.instanceOf;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.nullValue;
+import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.*;
 
@@ -27,7 +25,7 @@ public class MultipleParentClassLoaderTest {
     private static final String FOO = "foo", BAR = "bar", QUX = "qux", BAZ = "baz", SCHEME = "http://";
 
     @Rule
-    public TestRule mockitoRule = new MockitoRule(this);
+    public MethodRule mockitoRule = MockitoJUnit.rule().silent();
 
     @Rule
     public MethodRule integrationRule = new IntegrationRule();
@@ -47,10 +45,10 @@ public class MultipleParentClassLoaderTest {
         when(second.loadClass(BAR)).thenReturn((Class) BarSecond.class);
         when(second.loadClass(QUX)).thenReturn((Class) Qux.class);
         when(second.loadClass(BAZ)).thenThrow(new ClassNotFoundException());
-        fooUrl = new URL(SCHEME + FOO);
-        barFirstUrl = new URL(SCHEME + BAR);
-        barSecondUrl = new URL(SCHEME + BAZ);
-        quxUrl = new URL(SCHEME + QUX);
+        fooUrl = URI.create(SCHEME + FOO).toURL();
+        barFirstUrl = URI.create(SCHEME + BAR).toURL();
+        barSecondUrl = URI.create(SCHEME + BAZ).toURL();
+        quxUrl = URI.create(SCHEME + QUX).toURL();
         when(first.getResource(FOO)).thenReturn(fooUrl);
         when(first.getResource(BAR)).thenReturn(barFirstUrl);
         when(second.getResource(BAR)).thenReturn(barSecondUrl);
